# go-spacemesh

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .golangci-fast.yml  .golangci-slow-tolerant.yml  .golangci.yml  .python-version  .travis.yml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING.md  CONTRIBUTING.md  DockerFileTests  DockerFileTestsElk  Dockerfile  Dockerfile.prebuiltBinary  DockerfilePrebuiltBinary  ENV  ISSUE_TEMPLATE.md  LICENSE  Makefile  Makefile-gpu.Inc  Makefile-libs.Inc  Makefile-svm.Inc  Makefile.Inc  README.md  RELEASE.md  SECURITY.md  STYLE.md  Vagrantfile  appveyor.yml  bootstrap.Dockerfile  bors.toml  ci.md  config.json  config.toml  coverage.html  (+15 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  codecov.yml  dependabot.yml  pull_request_template.md
.run/: Template Go Test.run.xml  go-env-test.run.xml
accounts/: account.go  account_test.go  keyfile.go  ops.go  ops_test.go  store.go
activation/: activation.go  activation_errors.go  activation_fuzz_test.go  activation_mocks.go  activation_multi_test.go  activation_test.go  activationdb_test.go  atx_pool.go  atx_service_db.go  atx_service_db_test.go  atxdb.go  atxdb_test.go  builder_v2_test.go  cache.go  certifier.go  certifier_test.go  challenge_verifier.go  challenge_verifier_mocks.go  challenge_verifier_test.go  db.go  fetch_mock.go  handler.go  handler_fuzz_test.go  handler_test.go  handler_v1.go  handler_v1_test.go  handler_v2.go  handler_v2_test.go  identities.go  identity_states.go  identity_states_test.go  interface.go  interface_mocks.go  malfeasance.go  malfeasance2.go  malfeasance2_handler.go  malfeasance2_publisher.go  malfeasance2_publisher_test.go  malfeasance_service.go  malfeasance_service_test.go  (+55 more)
activation_service_poc/: config.standalone.client.json  config.standalone.client2.json  config.standalone.node-service.json  docker-compose.yml  start.sh
address/: address.go
amcl/: AES.go  readme.md
api/: README.md  api_test.go  backend.go  (+10 more)
athenavm/templates/script/: Cargo.toml
vm/templates/program/: Cargo.toml
vm/templates/program/elf/: wallet-template
vm/templates/program/src/: main.rs
vm/templates/script/: Cargo.toml
(+2960 files in other folders)
