[workspace]
[package]
version = "0.1.0"
name = "wallet-template"
edition = "2021"

[dependencies]
athena-vm = { git = "https://github.com/athenavm/athena.git", branch = "vmsdk", features = [
  "rv32e",
] }
athena-vm-sdk = { git = "https://github.com/athenavm/athena.git", branch = "vmsdk" }
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
wallet-common = { path = "../common" }
